--- a/src/App.css
+++ b/src/App.css
@@ -53,4 +53,24 @@
     color : darkred;
     background-image: linear-gradient(#f47d99, #edeb6d);
 }
+
+.activate-div{
+  font-family: "EB Garamond", serif;
+    font-optical-sizing: auto;
+    width:400px;
+    margin-left: 10px;
+    margin-top: 50px;
+    padding-top: 10px;
+    border: 3px solid black;
+    text-align: center;
+    font-weight: 900;
+    font-size : 25px;
+    color : darkred;
+    background-image: linear-gradient(#bbc2e3, #3dd852);
+}
+
+#activate-btn{
+  margin-bottom: 10px;
+  margin-left: 10px;
+}
   
