--- a/src/index.css
+++ b/src/index.css
@@ -27,11 +27,12 @@
   font-weight: bold;
   width: 80px;
   height: 40px;
+  margin-top:10px;
   /* margin-left: 50px;
   margin-bottom: -250px; */
-  position: absolute;
-  top : 45%;
-  right: 68%;
+  /* position: absolute; */
+  /* top : 45%; */
+  /* right: 68%; */
 }
 
 .card{
